fix scrollbar pushing content. Update content

--- a/styling.css
+++ b/styling.css
@@ -8,6 +8,10 @@
     --less-dark: rgb(40, 40, 40);
 }
 
+html {
+    overflow-y: scroll;
+}
+
 body {
     background-color: var(--dark);
     font-family: "Lucida Console", Monaco, monospace;
@@ -24,6 +28,10 @@ figure {
 img {
     width: 100%;
     background: var(--less-dark);
+}
+
+div {
+    overflow: visible; 
 }
 
 iframe {
